# safe-word-android

./: .detekt.yml  .gitignore  .gitmodules  CONTRIBUTING.md  VOICE_COMMANDS_REFERENCE.md  build-log2.txt  build.gradle.kts  gradle.properties  gradlew.bat  prd.md  settings.gradle.kts
.github/: copilot-instructions.md
.github/hooks/: pre-compile.json
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.safeword.android.data.db.SafeWordDatabase/: 1.json  2.json  3.json  4.json
app/src/androidTest/java/com/safeword/android/: ExampleInstrumentedTest.kt
app/src/androidTest/kotlin/com/safeword/android/benchmark/: TranscriptionBenchmark.kt
app/src/androidTest/kotlin/com/safeword/android/example/: AccessibilityServiceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_wrapper.h  moonshine-android-stubs.cpp  moonshine-bridge.cpp  whisper-jni.cpp
app/src/main/java/com/safeword/android/: MainActivity.kt  SafeWordApp.kt
app/src/main/java/com/safeword/android/audio/: AdaptiveVadSensitivity.kt  AudioPreprocessor.kt  AudioRecorder.kt  FloatRingBuffer.kt  SilenceAutoStopDetector.kt  SileroVadDetector.kt
app/src/main/java/com/safeword/android/data/: MicAccessEventRepository.kt  PersonalVocabularyRepository.kt
app/src/main/java/com/safeword/android/data/db/: MicAccessEventDao.kt  MicAccessEventEntity.kt  PersonalVocabularyDao.kt  PersonalVocabularyEntity.kt  PersonalizedEntryDao.kt  PersonalizedEntryEntity.kt  SafeWordDatabase.kt  TranscriptionDao.kt  TranscriptionEntity.kt
app/src/main/java/com/safeword/android/data/model/: ModelDownloadWorker.kt  ModelInfo.kt  ModelRepository.kt
app/src/main/java/com/safeword/android/data/settings/: AppSettings.kt  CustomCommandRepository.kt  OnboardingRepository.kt  PersonalizedDictionaryRepository.kt  SettingsRepository.kt
app/src/main/java/com/safeword/android/di/: AccessibilityModule.kt  AppModule.kt  CoroutineScopesModule.kt
app/src/main/java/com/safeword/android/domain/usecase/: ModelDownloadUseCase.kt  TranscriptionUseCase.kt
app/src/main/java/com/safeword/android/security/: KeyStoreHelper.kt
app/src/main/java/com/safeword/android/service/: AccessibilityBridge.kt  AccessibilityStateHolder.kt  DefaultAccessibilityBridge.kt  FloatingOverlayService.kt  OverlayMicButton.kt  OverlayViewModel.kt  RecordingService.kt  SafeWordAccessibilityService.kt  ThermalMonitor.kt  VoiceActionExecutor.kt
app/src/main/java/com/safeword/android/transcription/: AhoCorasickMatcher.kt  AudioProcessor.kt  CompositionalCommandMatcher.kt  ConfusionSetCorrector.kt  ContentNormalizer.kt  ContextualGrammarCorrector.kt  CorrectionLearner.kt  CustomVoiceCommand.kt  DefaultTextProcessor.kt  DisfluencyNormalizer.kt  DormancyWorker.kt  HallucinationFilter.kt  IncrementalTextInserter.kt  InferenceConfig.kt  IntentRecognizer.kt  InverseTextNormalizer.kt  ModelManager.kt  MoonshineEngine.kt  MoonshineNativeBridge.kt  MoonshineNativeEngine.kt  MoonshineStreamingEngine.kt  OptimalParameters.kt  PerformanceMonitor.kt  PersonalizedDictionaryCorrector.kt  PhoneticIndex.kt  PunctuationPredictor.kt  SemanticCommandMatcher.kt  SentenceEmbeddingModel.kt  SessionMetrics.kt  SpokenSymbolConverter.kt  SpokenSymbolTables.kt  StreamingTextState.kt  StreamingTranscriptionEngine.kt  StringDistance.kt  SymSpellCorrector.kt  TextFormatter.kt  TextPostProcessor.kt  TranscriptionCoordinator.kt  TranscriptionEngine.kt  TranscriptionOutputHandler.kt  (+11 more)
app/src/main/java/com/safeword/android/ui/: SafeWordAndroidApp.kt
app/src/main/java/com/safeword/android/ui/components/: GlassComponents.kt  OverlayMicButton.kt  StreamingTextPreview.kt
app/src/main/java/com/safeword/android/ui/navigation/: NavigationRoutes.kt  SafeWordNavGraph.kt
app/src/main/java/com/safeword/android/ui/screens/models/: ModelViewModel.kt
app/src/main/java/com/safeword/android/ui/screens/onboarding/: AccessibilityPage.kt  CompletePage.kt  DeviceStepsProvider.kt  ModelDownloadPage.kt  (+5 more)
app/src/main/java/com/safeword/android/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/safeword/android/util/: AppDataStore.kt  InstallSourceDetector.kt
app/src/main/res/drawable/: ic_launcher_background_adaptive.xml  ic_notification_mic.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  data_extraction_rules.xml  locales_config.xml
app/src/test/kotlin/com/safeword/android/audio/: AudioPipelineTest.kt  FloatRingBufferTest.kt
app/src/test/kotlin/com/safeword/android/data/db/: RoomMigrationTest.kt
app/src/test/kotlin/com/safeword/android/data/model/: ModelRepositoryTest.kt
app/src/test/kotlin/com/safeword/android/data/settings/: OnboardingRepositoryTest.kt  SettingsRepositoryTest.kt
app/src/test/kotlin/com/safeword/android/testutil/: FakeAccessibilityStateHolder.kt  FakeStreamingEngine.kt  PipelineAssertions.kt
app/src/test/kotlin/com/safeword/android/transcription/: AccentBiasTest.kt  ConfusionSetCorrectorTest.kt  ContentNormalizerTest.kt  CorrectionLearnerTest.kt  DefaultTextProcessorTest.kt  DisfluencyNormalizerTest.kt  HallucinationFilterTest.kt  IncrementalTextInserterTest.kt  ModelLifecycleTest.kt  PersonalizedDictionaryCorrectorTest.kt  PipelineIntegrationTest.kt  StreamingEngineContractTest.kt  TextFormatterTest.kt  TextPostProcessingPipelineTest.kt  TextPostProcessorTest.kt  TranscriptionCoordinatorTest.kt  VoiceCommandDetectorTest.kt  VoiceCommandPipelineTest.kt
app/src/test/kotlin/com/safeword/android/util/: MainDispatcherRule.kt
docs/: ARCHITECTURE.md  Android Keyboard 3D & Personalization Guide 2026 — Extension Volume.html  Android Keyboard Design Guide 2026 — Complete Edition.html  Complete_Debugging_Field_Manual_2026.html  Mobile_STT_Engineering_Guide_2026.html  Voice Command Reference.html  play-console-declarations.md  privacy-policy.md  stt-action-plan-1-quick-wins.md  stt-action-plan-2-deep-optimizations.md
gradle/: libs.versions.toml
(+9 files in other folders)
